--- a/fly.toml
+++ b/fly.toml
@@ -1,1 +1,23 @@
-fly launch
+# fly.toml app configuration file generated for kleinanzeigen-bot on 2025-12-30T21:47:32Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'kleinanzeigen-bot'
+primary_region = 'fra'
+
+[build]
+
+[http_service]
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
